[package]
name = "gridprint"
version = "1.0.0"
edition = "2021"

[dependencies]
eframe = { version = "0.27.2", features = ["persistence"] }
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "webp", "bmp"] }
rfd = "0.14.1"
printpdf = { version = "0.7.0", features = ["embedded_images"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Printing",
    "Win32_Storage_Xps",
    "Win32_Security",
    "Win32_UI_Shell"
] }
