[package]
name = "gridprint"
version = "1.0.0"
edition = "2021"

[dependencies]
eframe = { version = "0.27.2", features = ["persistence"] }
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "webp", "bmp"] }
rfd = "0.14.1"
printpdf = { version = "0.7.0", features = ["embedded_images"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Printing",
    "Win32_Storage_Xps",
    "Win32_Security",
    "Win32_UI_Shell"
] }

[profile.release]
opt-level = "z"       # Optimize for size
lto = true            # Enable Link-Time Optimization (LTO)
codegen-units = 1     # Reduce codegen units to improve size optimization
panic = "abort"       # Abort on panic to remove unwinding code
strip = true          # Strip symbols and debug info from binary
